syntax = "proto3";

option go_package = "github.com/iotaledger/autopeering-sim/server/proto";

package proto;

message Packet {
  bytes public_key = 1;
  bytes signature = 2;
  bytes data = 3;
}
